Step 7 compelete but with multiple selectable radio buttons

--- a/forms.html
+++ b/forms.html
@@ -14,13 +14,13 @@
         <textarea name="bio" id="bio" cols="30" rows="5"></textarea><br>
         <p>How did you hear about us?</p>
         <label for="billboard">Billboard</label>
-        <input type="radio" name="info" id="billboard">
+        <input type="radio" name="info_1" id="billboard">
         <label for="radio_ad">Radio Advertisement</label>
-        <input type="radio" name="info" id="radio_ad">
+        <input type="radio" name="info_2" id="radio_ad">
         <label for="internet">Internet Advertisement</label>
-        <input type="radio" name="info" id="internet">
+        <input type="radio" name="info_3" id="internet">
         <label for="other">Other</label>
-        <input type="radio" name="info" id="Other">
+        <input type="radio" name="info_4" id="Other">
     </form>
 </body>
 </html>
