Form exercise complete

--- a/forms.html
+++ b/forms.html
@@ -20,7 +20,16 @@
         <label for="internet">Internet Advertisement</label>
         <input type="radio" name="info_3" id="internet">
         <label for="other">Other</label>
-        <input type="radio" name="info_4" id="Other">
+        <input type="radio" name="info_4" id="Other"><br>
+        <label for="browser">Select which browser you are currently using:</label>
+        <select name="browser" id="browser">
+            <option value="chrome">Chrome</option>
+            <option value="firefox">Firefox</option>
+            <option value="ie">Internet Explorer</option>
+            <option value="safari">Safari</option>
+            <option value="edge">Edge</option>
+        </select><br>
+        <button type="submit">Submit the form</button>
     </form>
 </body>
 </html>
