added elformo email action

--- a/forms.html
+++ b/forms.html
@@ -5,7 +5,7 @@
     <title>Register With Us</title>
 </head>
 <body>
-    <form method="POST" action="https://request-inspector.glitch.me/">
+    <form action="https://www.elformo.com/forms/e755fd5e-0889-4667-931f-cb003adff35f" method="post" accept-charset="UTF-8>
         <label for="email">Email:</label>
         <input id="email" name="email" type="text" placeholder="Type your email here"><br>
         <label for="password">Password:</label>
@@ -20,7 +20,7 @@
         <label for="internet">Internet Advertisement</label>
         <input type="radio" name="info_3" id="internet">
         <label for="other">Other</label>
-        <input type="radio" name="info_4" id="Other"><br>
+        <input type="radio" name="info_4" id="other"><br>
         <label for="browser">Select which browser you are currently using:</label>
         <select name="browser" id="browser">
             <option value="chrome">Chrome</option>
