added values to the radio buttons on forms.html and created register.html

--- a/forms.html
+++ b/forms.html
@@ -14,13 +14,13 @@
         <textarea name="bio" id="bio" cols="30" rows="5"></textarea><br>
         <p>How did you hear about us?</p>
         <label for="billboard">Billboard</label>
-        <input type="radio" name="info_1" id="billboard">
+        <input type="radio" name="info_1" id="billboard" value="a">
         <label for="radio_ad">Radio Advertisement</label>
-        <input type="radio" name="info_2" id="radio_ad">
+        <input type="radio" name="info_2" id="radio_ad" value="b">
         <label for="internet">Internet Advertisement</label>
-        <input type="radio" name="info_3" id="internet">
+        <input type="radio" name="info_3" id="internet" value="c">
         <label for="other">Other</label>
-        <input type="radio" name="info_4" id="other"><br>
+        <input type="radio" name="info_4" id="other" value="d"><br>
         <label for="browser">Select which browser you are currently using:</label>
         <select name="browser" id="browser">
             <option value="chrome">Chrome</option>
