--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>More Forms Practice</title>
+    <title>Even More Forms Practice</title>
 </head>
 <body>
     <form action="https://request-inspector.glitch.me/" method="post">
@@ -12,11 +12,9 @@
         <input type="text" id="email" name="email" required><br>
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required><br>
-        <label for="confirm_password">Confirm Password</label>
-        <input type="password" id="confirm_password" name="confirm_password" required><br>
-        <label for="newsletter">Sign me up for this newsletter</label>
-        <input type="checkbox" name="newsletter" value="newsletter_checked" id="newsletter" checked><br>
-        <button type="submit">Create new account!</button>
+        <label for="logged">Keep me logged in for 2 weeks</label>
+        <input type="checkbox" name="logged" value="logged_checked" id="logged" checked><br>
+        <button type="submit">Login</button>
     </form>
 </body>
 </html>
