cleaned up spacing and created some div elements in all html files created today

--- a/forms.html
+++ b/forms.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Register With Us</title>
-</head>
-<body>
-    <form action="https://www.elformo.com/forms/e755fd5e-0889-4667-931f-cb003adff35f" method="post" accept-charset="UTF-8>
-        <label for="email">Email:</label>
-        <input id="email" name="email" type="text" placeholder="Type your email here"><br>
-        <label for="password">Password:</label>
-        <input id="password" name="password" type="password" placeholder="Type your password here"><br>
-        <label for="bio">Describe yourself:</label><br>
-        <textarea name="bio" id="bio" cols="30" rows="5"></textarea><br>
-        <p>How did you hear about us?</p>
-        <label for="billboard">Billboard</label>
-        <input type="radio" name="info" id="billboard" value="a">
-        <label for="radio_ad">Radio Advertisement</label>
-        <input type="radio" name="info" id="radio_ad" value="b">
-        <label for="internet">Internet Advertisement</label>
-        <input type="radio" name="info" id="internet" value="c">
-        <label for="other">Other</label>
-        <input type="radio" name="info" id="other" value="d"><br>
-        <label for="browser">Select which browser you are currently using:</label>
-        <select name="browser" id="browser">
-            <option value="chrome">Chrome</option>
-            <option value="firefox">Firefox</option>
-            <option value="ie">Internet Explorer</option>
-            <option value="safari">Safari</option>
-            <option value="edge">Edge</option>
-        </select><br>
-        <button type="submit">Submit the form</button>
-    </form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Register With Us</title>
+    </head>
+    <body>
+        <main>
+            <form action="https://request-inspector.glitch.me/" method="post">
+                <div>
+                    <label for="email">Email:</label>
+                    <input id="email" name="email" type="text" placeholder="Type your email here"><br>
+                    <label for="password">Password:</label>
+                    <input id="password" name="password" type="password" placeholder="Type your password here"><br>
+                </div>
+                <div>
+                    <label for="bio">Describe yourself:</label><br>
+                    <textarea name="bio" id="bio" cols="30" rows="5"></textarea><br>
+                </div>
+                <div>
+                    <p>How did you hear about us?</p>
+                    <label for="billboard">Billboard</label>
+                    <input type="radio" name="info" id="billboard" value="a">
+                    <label for="radio_ad">Radio Advertisement</label>
+                    <input type="radio" name="info" id="radio_ad" value="b">
+                    <label for="internet">Internet Advertisement</label>
+                    <input type="radio" name="info" id="internet" value="c">
+                    <label for="other">Other</label>
+                    <input type="radio" name="info" id="other" value="d"><br>
+                </div>
+                <br>
+                <div>
+                    <label for="browser">Select which browser you are currently using:</label>
+                    <select name="browser" id="browser">
+                        <option value="chrome">Chrome</option>
+                        <option value="firefox">Firefox</option>
+                        <option value="ie">Internet Explorer</option>
+                        <option value="safari">Safari</option>
+                        <option value="edge">Edge</option>
+                    </select><br>
+                </div>
+                <br>
+                <button type="submit">Submit the form</button>
+            </form>
+        </main>
+    </body>
 </html>
