--- a/checkout.html
+++ b/checkout.html
@@ -1,43 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lots More Forms Practice</title>
-</head>
-<body>
-    <form action="https://request-inspector.glitch.me/" method="post">
-        <label for="cc_number">Credit Card Number:</label>
-        <input type="text" name="cc_number" id="cc_number" required><br>
-        <label for="expireMM">Expiration Month:</label>
-        <select name='expireMM' id='expireMM' required>
-            <option value=''>Month</option>
-            <option value='01'>January</option>
-            <option value='02'>February</option>
-            <option value='03'>March</option>
-            <option value='04'>April</option>
-            <option value='05'>May</option>
-            <option value='06'>June</option>
-            <option value='07'>July</option>
-            <option value='08'>August</option>
-            <option value='09'>September</option>
-            <option value='10'>October</option>
-            <option value='11'>November</option>
-            <option value='12'>December</option>
-        </select>
-        <label for="expireYY">Expiration Year:</label>
-        <select name='expireYY' id='expireYY' required>
-            <option value=''>Year</option>
-            <option value='10'>2020</option>
-            <option value='11'>2021</option>
-            <option value='12'>2022</option>
-        </select><br>
-        <label for="sec_code">Security Code:</label>
-        <input type="text" name="sec_code" id="sec_code" required><br>
-        <label for="address">Billing Address:</label>
-        <input type="text" id="address" name="address" required><br>
-        <label for="future">Keep this credit card on file for future transactions</label>
-        <input type="checkbox" id="future" name="future" checked><br>
-        <button type="submit">Buy Now!</button>
-    </form>
-</body>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Lots More Forms Practice</title>
+    </head>
+    <body>
+        <main>
+            <form action="https://request-inspector.glitch.me/" method="post">
+                <div>
+                    <label for="cc_number">Credit Card Number:</label>
+                    <input type="text" name="cc_number" id="cc_number" required><br>
+                </div>
+                <div>
+                    <label for="expireMM">Expiration Month:</label>
+                    <select name='expireMM' id='expireMM' required>
+                        <option value=''>Month</option>
+                        <option value='01'>January</option>
+                        <option value='02'>February</option>
+                        <option value='03'>March</option>
+                        <option value='04'>April</option>
+                        <option value='05'>May</option>
+                        <option value='06'>June</option>
+                        <option value='07'>July</option>
+                        <option value='08'>August</option>
+                        <option value='09'>September</option>
+                        <option value='10'>October</option>
+                        <option value='11'>November</option>
+                        <option value='12'>December</option>
+                    </select>
+                    <label for="expireYY">Expiration Year:</label>
+                    <select name='expireYY' id='expireYY' required>
+                        <option value=''>Year</option>
+                        <option value='10'>2020</option>
+                        <option value='11'>2021</option>
+                        <option value='12'>2022</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="sec_code">Security Code:</label>
+                    <input type="text" name="sec_code" id="sec_code" required><br>
+                </div>
+                <div>
+                    <label for="address">Billing Address:</label>
+                    <input type="text" id="address" name="address" required><br>
+                </div>
+                <div>
+                    <label for="future">Keep this credit card on file for future transactions</label>
+                    <input type="checkbox" id="future" name="future" checked><br>
+                </div>
+                <button type="submit">Buy Now!</button>
+            </form>
+        </main>
+    </body>
 </html>
