--- a/login.html
+++ b/login.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Even More Forms Practice</title>
-</head>
-<body>
-    <form action="https://request-inspector.glitch.me/" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" autofocus="autofocus" required><br>
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email" required><br>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required><br>
-        <label for="logged">Keep me logged in for 2 weeks</label>
-        <input type="checkbox" name="logged" value="logged_checked" id="logged" checked><br>
-        <button type="submit">Login</button>
-    </form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Even More Forms Practice</title>
+    </head>
+    <body>
+        <main>
+            <form action="https://request-inspector.glitch.me/" method="post">
+                <div>
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" autofocus="autofocus" required><br>
+                    <label for="email">Email:</label>
+                    <input type="text" id="email" name="email" required><br>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required><br>
+                </div>
+                <div>
+                <label for="logged">Keep me logged in for 2 weeks</label>
+                <input type="checkbox" name="logged" value="logged_checked" id="logged" checked><br>
+                </div>
+                <button type="submit">Login</button>
+            </form>
+        </main>
+    </body>
 </html>
