--- a/welcome.html
+++ b/welcome.html
@@ -3,38 +3,39 @@
     <head>
         <meta charset="UTF-8">
         <title>Veridian Dynamics</title>
+        <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <a name="top"></a>
-        <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
+        <h1 class="fancy-header header">Welcome to Veridian Dynamics!</h1>
         <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.</p>
         <hr>
-        <h2>Core Values</h2>
+        <h2 class="header">Core Values</h2>
             <ul>
                 <li>Competence</li>
                 <li>Involvement</li>
                 <li>Technology</li>
             </ul>
-        <h2>Our Process</h2>
+        <h2 class="header">Our Process</h2>
             <ol>
                 <li>Plan</li>
                 <li>Evaluate</li>
                 <li>Implement</li>
             </ol>
-        <h2>2020 Vision</h2>
+        <h2 class="header">2020 Vision</h2>
             <ul>
                 <li>Become #1 in Technology</li>
                 <li>Increase Success by 20%</li>
                 <li>Increase Business by 30%</li>
             </ul>
         <hr>
-        <h2>Company Vision</h2>
+        <h2 class="header">Company Vision</h2>
         <img src="img/Untitled.png" width="500" alt="laptops">
         <img src="img/Untitled1.png" width="500" alt="man standing">
         <img src="img/Untitled2.png" width="500" alt="sunset">
         <img src="img/Untitled3.png"  width="500" alt="people siting">
-        <h2>Our Product</h2>
+        <h2 class="header">Our Product</h2>
             <table>
                 <tr>
                     <th><strong>Plan</strong></th>
