--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -33,6 +33,11 @@
                 }
             }
 
+            // Write a function that returns the quotient of two numbers (Assume the arguments will be numbers)
+            function quotient(num1,num2) {
+                return num1 / num2;
+            }
+
         </script>
     </body>
 </html>
