--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -38,6 +38,12 @@
                 return num1 / num2;
             }
 
+            // Write a JavaScript function that returns the number 7
+            function seven() {
+                return 7;
+            }
+
+            console.log(seven());
         </script>
     </body>
 </html>
