--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -42,6 +42,16 @@
             function seven() {
                 return 7;
             }
+
+            // Write a JavaScript function that takes in an argument, and will return the boolean true if the argument is an even number, and false for all other arguments.
+            function isEven(num) {
+                if (num % 2 === 0) {
+                    return true;
+                } else {
+                    return false;
+                }
+            }
+
         </script>
     </body>
 </html>
