completed the mondrian part of the css grid exercises

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -11,15 +11,15 @@
     <body>  
         <nav>
             <ul>
-                <li class="nav-bar nav-bar-left"><a class="nav-link" href="#">Articles</a></li>
-                <li class="nav-bar nav-bar-left"><a class="nav-link" href="#">Products</a></li>
-                <li class="nav-bar nav-bar-left"><a class="nav-link" href="#">Market</a></li>
-                <li class="nav-bar nav-bar-left"><a class="nav-link" href="#">Jobs</a></li>
+                <li class="nav-bar"><a class="nav-link" href="#">Articles</a></li>
+                <li class="nav-bar"><a class="nav-link" href="#">Products</a></li>
+                <li class="nav-bar"><a class="nav-link" href="#">Market</a></li>
+                <li class="nav-bar"><a class="nav-link" href="#">Jobs</a></li>
                 <li class="nav-logo"><a class="nav-logo-link" href="#">Logo</a></li>
-                <li class="nav-bar nav-bar-right"><a class="nav-link" href="#">Follow Us</a></li>
-                <li class="nav-bar nav-bar-right"><a class="nav-link" href="#"><i class="fas fa-search"></i></a></li>
-                <li class="nav-bar nav-bar-right"><a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a></li>
-                <li class="nav-bar nav-bar-right"><a class="nav-link" href="#"><i class="fas fa-user-circle"></i></a></li>
+                <li class="nav-bar"><a class="nav-link" href="#">Follow Us</a></li>
+                <li class="nav-bar"><a class="nav-link" href="#"><i class="fas fa-search"></i></a></li>
+                <li class="nav-bar"><a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                <li class="nav-bar"><a class="nav-link" href="#"><i class="fas fa-user-circle"></i></a></li>
             </ul>
         </nav>
     </body>
