--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -52,6 +52,14 @@
                 }
             }
 
+            // Write a function, returnEvenOddMessage, that takes in a number input and returns the string "is even" if the number input is even and returns the string "is odd" if the number input is odd.
+            function returnEvenOddMessage(num) {
+                if (num % 2 === 0) {
+                    return 'is even';
+                } else if (num % 2) {
+                    return 'is odd';
+                }
+            }
         </script>
     </body>
 </html>
