completed morning js warmup

--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -60,6 +60,11 @@
                     return 'is odd';
                 }
             }
+
+            // Write a javascript function that returns true or false as to whether or not a number passed into the function is a whole number.
+            function isWholeNum(num) {
+                return (Number.isInteger(num));
+            }
         </script>
     </body>
 </html>
